ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0881a6a4e95588d78,subnet-0ba0c89de633a8c02
    kubernetes.io/ingress.class: alb
  finalizers:
  - ingress.k8s.aws/resources
  labels:
    app: ingress
  name: ingress
  namespace: default
spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
